--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "layout.html" %}
 {% block content %}
-<main class="container-fluid" id="background"></main>
+<section id="inicioBackground"></section>
 {% endblock  %}
