Agregue JavaScript al Contado

--- a/templates/contado.html
+++ b/templates/contado.html
@@ -7,7 +7,7 @@
         <h3>Agregar Productos</h3>
         <div class="summary">
             <p>ID de Venta: <span id="sale-id"></span></p>
-            <p>Total de la Venta: C$<span id="total-purchase">0.00</span></p>
+            <p>Total de la Venta: C$<span id="total-purchase"></span></p>
         </div>
     </div>
 
