updates of all the created templates and adding the products table

--- a/templates/abonarCredito.html
+++ b/templates/abonarCredito.html
@@ -5,7 +5,7 @@
     <div class="search-container mb-4">
         <h3>Buscar Cliente</h3>
         <input type="text" id="cliente-id" class="form-control" placeholder="Buscar por ID del cliente" aria-label="Client ID">
-        <button type="button" class="btn btn-info mt-2">Buscar Cliente</button>
+        <button type="button" class="btn mt-2" style="background-color: #B2C568; color: #fff;">Buscar Cliente</button>
     </div>
 
     <!-- Detalles del Cliente y Crédito -->
