--- a/templates/contado.html
+++ b/templates/contado.html
@@ -27,7 +27,7 @@
                 <label for="product-price" class="form-label">Precio Unitario</label>
                 <input type="number" class="form-control" id="product-price" placeholder="Precio" min="0" step="0.01">
             </div>
-            <button class="btn btn-primary mt-3" id="agregar" type="button">Agregar Producto</button>
+            <button class="btn mt-3" id="agregar" type="button" style="background-color: #B2C568; color: #fff;">Agregar Producto</button>
         </form>
     </div>
 </div>
