--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Productos</a>
+              <a class="nav-link" href="{{ url_for('productos') }}">Productos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Compras</a>
