--- a/templates/productos.html
+++ b/templates/productos.html
@@ -1,20 +1,170 @@
 {% extends "layout.html" %}
 {% block content %}
 <main class="container">
-    <div class="d-flex justify-content-center mb-4">
-        <form class="row g-3">
+  <div class="container">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <form class="row g-2 align-items-center">
+            <!-- Etiqueta y campo de entrada alineados horizontalmente -->
             <div class="col-auto">
-              <label for="staticEmail2" class="visually-hidden">Producto: </label>
-              <input type="text" readonly class="form-control-plaintext" id="BusquedaProducto" value="email@example.com">
+              <label for="inputProduct" class="form-label mb-0">Producto a buscar</label>
             </div>
             <div class="col-auto">
-              <label for="inputPassword2" class="visually-hidden">Password</label>
-              <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+              <input type="text" class="form-control" id="inputProduct" placeholder="Ingrese el producto">
             </div>
+            <!-- Botón alineado horizontalmente con el campo de entrada -->
             <div class="col-auto">
-              <button type="submit" class="btn btn-primary mb-3">Buscar</button>
+              <button type="submit" class="btn" style="background-color: #B2C568; color: #fff;">Buscar</button>
             </div>
-          </form>
+        </form>
+        
+        <!-- Botón "Regresar" alineado a la derecha -->
+        <div>
+          <button class="btn" type="button" style="background-color: #ECC199; color: #fff;">Regresar</button>
+        </div>
     </div>
+</div>
+
+    <div class="table-container" id="tabla-productos">
+      <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th scope="col">codigo</th>
+              <th scope="col">nombre</th>
+              <th scope="col">precio unitario</th>
+              <th scope="col">categoria</th>
+              <th scope="col">descripción</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Contenido de la tabla -->
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+            <tr>
+              <td>546546</td>
+              <td>Otto</td>
+              <td>56</td>
+              <td>Producto</td>
+              <td>Intsgy</td>
+            </tr>
+          </tbody>
+      </table>
+  </div>  
 </main>
-{% endblock  %}
+{% endblock %}
