:rocket: Adding funcionality of guardarVenta route

--- a/templates/contado.html
+++ b/templates/contado.html
@@ -56,7 +56,7 @@
 
     <!-- Botón para guardar la compra -->
     <div class="text-end mt-3">
-        <button class="btn btn-success" onclick="savePurchase()">Guardar Venta</button>
+        <button class="btn btn-success" id="guardarVenta">Guardar Venta</button>
     </div>
 </main>
 
